[gd_scene load_steps=13 format=2]

[ext_resource path="res://entity/inventory/support_item/mine/ap_mine.obj" type="ArrayMesh" id=1]
[ext_resource path="res://entity/plant_explosive/mine/mine_entity.gd" type="Script" id=2]
[ext_resource path="res://addons/explosion/quick_explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/explosion/material.tres" type="Material" id=4]

[sub_resource type="SpatialMaterial" id=30]
albedo_color = Color( 0.392157, 0.392157, 0.392157, 1 )

[sub_resource type="SpatialMaterial" id=31]
albedo_color = Color( 0.129412, 0.129412, 0.129412, 1 )

[sub_resource type="SpatialMaterial" id=32]
flags_unshaded = true
flags_vertex_lighting = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
albedo_color = Color( 1, 0.294118, 0, 1 )

[sub_resource type="BoxShape" id=26]
extents = Vector3( 0.241172, 0.190099, 0.178021 )

[sub_resource type="Animation" id=28]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("mine/MeshInstance:material/2:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.294118, 0, 1 ) ]
}

[sub_resource type="Animation" id=29]
resource_name = "bip"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("mine/MeshInstance:material/2:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.294118, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CylinderShape" id=33]
height = 5.0
radius = 2.0

[sub_resource type="QuadMesh" id=10]
material = ExtResource( 4 )
size = Vector2( 8, 8 )

[node name="mine" type="KinematicBody"]
collision_layer = 0
input_ray_pickable = false
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false
material/0 = SubResource( 30 )
material/1 = SubResource( 31 )
material/2 = SubResource( 32 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.133069, 0 )
shape = SubResource( 26 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
autoplay = "bip"
anims/RESET = SubResource( 28 )
anims/bip = SubResource( 29 )

[node name="damage_area" type="Area" parent="."]
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="damage_area"]
shape = SubResource( 33 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
bus = "Sfx"

[node name="Explosion1" parent="." instance=ExtResource( 3 )]
mesh = SubResource( 10 )

[connection signal="body_entered" from="damage_area" to="." method="_on_damage_area_body_entered"]
